# tecno-spark-solutions-main-branch-

./: .env.example  .env.production  .gitignore  00_START_HERE.md  1000_AGENTS_DELIVERY_INDEX.txt  ADVANCED_FEATURES_QUICK_REFERENCE.md  ADVANCED_FEATURES_SUMMARY.md  AGENT_MANAGEMENT_IMPLEMENTATION.md  AGENT_MANAGEMENT_QUICK_REFERENCE.md  AGENT_MANAGEMENT_SUMMARY.md  API_AUDIT_EXECUTIVE_SUMMARY.md  API_AUDIT_REPORT.md  API_REPLACEMENT_IMPLEMENTATION_GUIDE.md  BUDDY_AI_OS_V2_ENHANCED.md  COMPLETE_1000_AGENTS_SPECIFICATION.md  COMPLETE_DELIVERY_LIST.md  COMPLETE_IMPLEMENTATION_GENERATOR.py  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_PROJECT_STATUS.md  COMPREHENSIVE_PROJECT_STATUS_ANALYSIS.txt  CONTRIBUTING.md  DATABASE_IMPLEMENTATION.md  DATABASE_QUICK_REFERENCE.md  DEPLOYMENT_ARTIFACTS_SUMMARY.py  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_EXECUTION_LOG.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_READY_DOWNLOAD.txt  DEPLOYMENT_READY_SUMMARY.md  DOWNLOAD_AND_DEPLOY.md  DOWNLOAD_DIRECT.html  DOWNLOAD_NOW.bat  DOWNLOAD_PAGE.html  Dockerfile.backend  EXECUTIVE_DEPLOYMENT_SUMMARY.txt  EXPANSION_RESEARCH_1000_AGENTS.md  FINAL_COMPLETE_DELIVERY_REPORT.txt  FINAL_COMPLETE_PROJECT_REPORT.txt  FINAL_COMPLETE_STATUS_1000AGENTS.md  FINAL_DELIVERY_SUMMARY.md  (+68 more)
backend/: .env.example  DATABASE_README.md  DEPLOYMENT_STATUS_REPORT.py  alembic.ini  enhanced_verify_system.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  verify_system.py
backend/agents/: accountant_agent.py  agent_factory.py  ai_model_trainer_agent.py  ai_model_trainer_config.json  airbnb_agent.py  asana_agent.py  audience_analytics_engine_agent.py  audience_analytics_engine_config.json  automation_agent.py  aws_agent.py  azure_agent.py  base_agent.py  billing_and_claims_processor_agent.py  billing_and_claims_processor_config.json  booking_agent.py  budget_forecaster_agent.py  budget_forecaster_config.json  cal_agent.py  calendly_agent.py  ceo_agent.py  chatwoot_agent.py  clinical_documentation_assistant_agent.py  clinical_documentation_assistant_config.json  competitor_analyzer_agent.py  competitor_analyzer_config.json  compliance_monitor_agent.py  compliance_monitor_config.json  content_publishing_manager_agent.py  content_publishing_manager_config.json  content_writer_agent.py  contract_analyzer_agent.py  contract_analyzer_config.json  crm_agent.py  curriculum_manager_agent.py  curriculum_manager_config.json  customer_bill_manager_agent.py  customer_bill_manager_config.json  customer_segmentation_engine_agent.py  customer_segmentation_engine_config.json  data_quality_monitor_agent.py  (+157 more)
backend/api/: main.py  main_all_phases.py  main_merged.py  omni_api.py
backend/config/: enterprise_config.py  logging_config.py  settings.py
backend/core/: ai_provider.py  buddy_core.py  campaign_manager.py  claw_bridge.py  compliance_engine.py  event_bus.py  intent_router.py  memory_engine.py  model_router.py  super_brain.py  workflow_engine.py
backend/db/: database.py  models.py  models_phase_extensions.py  omni_db.py  seed_data.py
backend/infrastructure/: DEPLOYMENT_CHECKLIST.py  deploy_kubernetes.py  global_deployment.py  verify_enterprise_system.py
backend/migrations/: env.py
backend/scripts/: deep_veltech_campaign.py  demo_company_workflow.py  fetch_live_emails.py  fetch_real_news.py  fix_agents.py  generate_ad_poster.py  genesis_omni_mnc.py  migrate_to_opensource.py  monitor_emails.py  physical_workflow_test.py  read_email_body.py  run_real_test.py  seed_agents.py  test_omni_mnc.py  test_system.py  training_simulation.py  trigger_veltech_campaign.py  trigger_voice_agent_task.py
backend/services/: admin_service.py  agent_registration.py  agent_scalability_service.py  agent_service.py  analytics_service.py  company_integration_service.py  file_service.py  integration_service.py  marketplace_service.py  multi_tenancy_service.py  notification_service.py  search_service.py  security_service.py  user_service.py  workflow_service.py
backend/utils/: design_tools.py  file_system_tools.py  (+3 more)
(+1177 files in other folders)
