[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buddy-ai-os-backend"
version = "0.1.0"
description = "Buddy AI Operating System Backend - Central intelligence for AI agent ecosystem"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tecno Spark Solutions", email = "dev@tecnospark.com"}
]
keywords = [
    "ai", "agents", "automation", "orchestration", "llm", "buddy"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core Framework
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",

    # Database
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "alembic==1.12.1",
    "redis==5.0.1",

    # Vector & Graph Databases
    "chromadb==0.4.22",
    "neo4j==5.15.0",

    # Authentication & Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "cryptography==41.0.7",
    "python-multipart==0.0.6",

    # AI/ML
    "ollama==0.1.31",
    "openai==1.3.6",
    "langchain==0.1.3",
    "sentence-transformers==2.2.2",
    "numpy==1.26.2",

    # API Integrations
    "httpx==0.25.2",
    "aiohttp==3.9.1",
    "google-auth-oauthlib==1.2.0",
    "google-api-python-client==2.107.0",
    "python-telegram-bot==20.4",
    "twilio==8.11.0",

    # Utilities
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",

    # Logging & Monitoring
    "structlog==23.2.0",
    "python-json-logger==2.0.7",

    # Testing (included in main for development)
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
]

[project.optional-dependencies]
dev = [
    "black==23.12.0",
    "flake8==6.1.0",
    "pylint==3.0.3",
    "isort==5.13.2",
    "mypy==1.7.1",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.5.0",
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["core*", "agents*", "services*", "api*", "models*", "db*", "integrations*", "ml*", "utils*", "config*", "tests*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "--cov=backend --cov-report=html --cov-report=term-missing"
